--- a/implementations/rust/workspace/protocol/Cargo.toml
+++ b/implementations/rust/workspace/protocol/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 crypto = { path = "../crypto" }
 vser_derive = { path = "../crypto/macros/vser_derive" }
+# Added to fix CI issue.
+generic-array = "=0.14.7"
