--- a/implementations/rust/workspace/protocol/Cargo.toml
+++ b/implementations/rust/workspace/protocol/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 crypto = { path = "../crypto" }
 vser_derive = { path = "../crypto/macros/vser_derive" }
-# Added to fix CI issue.
+# generic-array version needs to be pinned, newer versions break SW supply chain checks
 generic-array = "=0.14.7"
+sha3 = "0.10"
+hex = "0.4"
