--- a/.github/workflows/test-validity-of-rust-workspace.yml
+++ b/.github/workflows/test-validity-of-rust-workspace.yml
@@ -65,5 +65,5 @@ jobs:
 
       - name: Build and Test the Rust Workspace
         run: |
-          cargo build --manifest-path $RUST_MANIFEST_PATH
-          cargo test --manifest-path $RUST_MANIFEST_PATH
+          cargo build --release --manifest-path $RUST_MANIFEST_PATH
+          cargo test --release --manifest-path $RUST_MANIFEST_PATH -- --test-threads=1
