--- a/implementations/rust/workspace/deny.toml
+++ b/implementations/rust/workspace/deny.toml
@@ -7,6 +7,12 @@ no-default-features = false
 feature-depth = 1
 
 [advisories]
+db-path = "~/.cargo/advisory-dbs"
+db-urls = ["https://github.com/RustSec/advisory-db"]
+ignore = [
+    "RUSTSEC-2024-0384", # unmaintained "instant", needed by "ascent"
+    "RUSTSEC-2024-0436", # unmaintained "paste", needed by "ascent"
+]
 
 [licenses]
 confidence-threshold = 0.8
