feat: updated threat model, added graph visualization
This commit replaces the old YAML threat model with a new,
more maintainable one in Python that also generates a graph
visualization. It is backward compatible with the old threat
model's Python data stuctures for LaTeX and assurance case
generation.

Co-authored-by: Daniel M. Zimmerman <dmz@freeandfair.us>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,12 +37,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Render Threat Model PDF
+      - name: Render Threat Model PDF and HTML
         run: |
-          cd models/threat-model/db
+          cd models/threat-model
           pip install -r requirements.txt
-          cd ..
-          make pdf
+          make all
 
       - name: Render Refinements Paper
         run: |
@@ -65,5 +64,6 @@ jobs:
           prerelease: true
           files: |
             models/threat-model/threat-model.pdf
+            models/threat-model/threat-model.html
             docs/papers/refinements_among_high_level_models/refinements_paper.pdf
             docs/faq/faq.pdf
