fix: replaced bincode with ciborium to remove cargo deny errors

--- a/implementations/rust/workspace/cryptography/Cargo.toml
+++ b/implementations/rust/workspace/cryptography/Cargo.toml
@@ -56,7 +56,8 @@ harness = true
 
 [dev-dependencies]
 serde = { version = "1.0.219", features=["derive"] }
-bincode = { version = "2.0.1", features=["serde"] }
+ciborium = { version = "0.2" }
+# bincode = { version = "2.0.1", features=["serde"] }
 
 [lints.rustdoc]
 missing_crate_level_docs = "deny"
